# TNL

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .editorconfig  .env  .gersemirc  .gitignore  .gitlab-ci-local-env  .gitlab-ci.yml  .typos.toml  AGENTS.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  build  configure  install  justfile  ruff.toml
Documentation/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  build  cppreference-doxygen-web.tag.xml  custom_style.css
Documentation/Examples/: CMakeLists.txt  ConfigDescriptionExample.cpp  FileExample.cpp  FileExampleCuda.cu  FileExampleCuda.h  FileExampleSaveAndLoad.cpp  FileNameExample.cpp  FileNameExampleDistributedSystemNodeCoordinates.cpp  FileNameExampleDistributedSystemNodeId.cpp  LoggerExample.cpp  MathExample.cpp  ObjectExample_getType.cpp  ParameterContainerExample.cpp  ParseObjectTypeExample.cpp  PerformanceCountersExample.cpp  StringExample.cpp  StringExampleGetAllocatedSize.cpp  StringExampleReplace.cpp  StringExampleSetSize.cpp  StringExampleSplit.cpp  StringExampleStrip.cpp  TimerExample.cpp  TimerExampleLogger.cpp
Documentation/Examples/Algorithms/: CMakeLists.txt  ParallelForExample-2D.cpp  ParallelForExample-3D.cpp  ParallelForExample.cpp  SequentialForExample.cpp  SortingCUBMergeSort.cu  SortingCUBRadixSort.cu  SortingExample.cpp  SortingExample2.cpp  SortingExample3.cpp  compressExample-lambda.cpp  compressExample-lambda.hip  compressExample-vector.cpp  compressExample-vector.hip  parallelForMultiIndexExample.cpp  parallelForMultiIndexExample.cu  parallelForScalarExample.cpp  parallelForScalarExample.cu  reduceArrayExample.cpp  reduceWithArgumentArrayExample.cpp  staticForExample.cpp  unrolledForExample.cpp
Documentation/Examples/Containers/: ArrayExample.cpp  ArrayExample_forElements.cpp  ArrayViewExample.cpp  ArrayViewExample_forElements.cpp  BitArrayExample_constructorWithArray.cpp  CMakeLists.txt  DistributedArrayExample.cpp  DistributedNDArrayExample.cpp  DistributedNDArrayExample.cu  DistributedVectorExample.cpp  DistributedVectorExample.cu  VectorExample.cpp
Documentation/Examples/Graphs/: CMakeLists.txt  GraphExample_Constructors.cpp  GraphExample_Constructors.cu  GraphExample_VertexView.cpp  GraphExample_VertexView.hip  GraphExample_setEdges.cpp  GraphExample_setEdges.hip
Documentation/Examples/Matrices/: CMakeLists.txt  MatrixWriterReaderExample.cpp
Documentation/Examples/Meshes/: CMakeLists.txt
Documentation/Examples/Pointers/: CMakeLists.txt  DevicePointerExample.cpp  SharedPointerExample.cpp  UniquePointerExample.cpp
Documentation/Pages/: comparison-with-other-libraries.md  core-concepts.md  main-page.md
Documentation/Tutorials/: CMakeLists.txt  index.md
Documentation/Tutorials/Arrays/: CMakeLists.txt  tutorial_Arrays.md
Documentation/Tutorials/ForLoops/: tutorial_ForLoops.md
Documentation/Tutorials/GeneralConcepts/: snippet_shared_pointers_and_views_capture_value.cpp  snippet_shared_pointers_and_views_capture_view_change.cpp  snippet_shared_pointers_and_views_capture_view_change_2.cpp  tutorial_GeneralConcepts.md
Documentation/Tutorials/Matrices/: CMakeLists.txt  DenseMatrixSetup_Benchmark.cpp  DenseMatrixViewExample_data_encapsulation.cpp  MultidiagonalMatrixSetup_Benchmark.cpp  SparseMatrixSetup_Benchmark.cpp  tutorial_Matrices.md
Documentation/Tutorials/Meshes/: CMakeLists.txt  tutorial_Grids.md  tutorial_Meshes.md
Documentation/Tutorials/NDArrays/: CMakeLists.txt  NDArrayExample_HalfStaticArray.cpp  NDArrayExample_RowMajorArray.cpp  tutorial_NDArrays.md
Documentation/Tutorials/Pointers/: CMakeLists.txt
Documentation/Tutorials/ReductionAndScan/: CMakeLists.txt  ComparisonExample.cpp  MapReduceExample-1.cpp  MaximumNormExample.cpp  ReductionWithArgument.cpp  SegmentedScanExample.cpp  SumExample.cpp  UpdateAndResidueExample.cpp  exclusiveScanExample.cpp  (+3 more)
Documentation/UsersGuide/: CMakeLists.txt  index.md  users-guide.md
Documentation/ai/: TNL_AI_DEVELOPER_GUIDE.md  TNL_ARCHITECTURE.md  TNL_PARALLEL_PATTERNS.md  TNL_PERFORMANCE_RULES.md  TNL_PROMPT_TEMPLATE.md
src/: .clang-format  .clang-tidy  CMakeLists.txt
src/Benchmarks/: ARCHITECTURE.md  CMakeLists.txt  benchmarks.example.toml  benchmarks.example.yaml
src/Benchmarks/GEM/: gem.h  (+7 more)
src/Examples/: CMakeLists.txt  tnl-optimize-ranks.cpp  tnl-turbulence-generator.cpp
src/Python/: BenchmarkLogs.py  BenchmarkPlots.py  CMakeLists.txt  LogParser.py  MultiindexCreator.py
src/TNL/: ARCHITECTURE.md  Assert.h  Atomic.h  Backend.h  DiscreteMath.h  Endianness.h  File.h  File.hpp  FileName.h  FileName.hpp  Functional.h  Hypre.h  Logger.h  Logger.hpp  MPI.h  Math.h  Object.h  Object.hpp  PerformanceCounter.h  PerformanceCounter.hpp  PerformanceCounters.h  PerformanceCounters.hpp  String.h  String.hpp  SystemInfo.h  SystemInfo.hpp  Timer.h  Timer.hpp  TypeInfo.h  TypeTraits.h  base64.h  experimental.dox  zlib_compression.h
src/Tools/: CMakeLists.txt  tnl-benchmark-to-html.py  tnl-cuda-arch.cu  tnl-decompose-grid.cpp  tnl-decompose-mesh.cpp  tnl-dicom-reader.cpp  tnl-diff.cpp  tnl-diff.h  tnl-dual-mesh.cpp  tnl-game-of-life.cpp  tnl-grid-setup.cpp  tnl-grid-setup.h  tnl-grid-to-mesh.cpp  tnl-image-converter.cpp  tnl-init.cpp  tnl-init.h  tnl-log-to-html.py  tnl-matrix-info.cpp  tnl-mesh-converter.cpp  tnl-mesh-info.cpp  tnl-planar-correct-mesh.cpp  tnl-plot-mesh-ordering.cpp  tnl-refine-mesh.cpp  tnl-reorder-mesh.cpp  tnl-run-benchmarks.py  tnl-test-distributed-mesh.cpp  tnl-test-distributed-mesh.h  tnl-triangulate-mesh.cpp  tnl-view.h
src/UnitTests/: ARCHITECTURE.md  AllocatorsTest.cpp  AllocatorsTest.h  AllocatorsTestCuda.cu  AllocatorsTestHip.hip  AssertCudaTest.cu  AssertTest.cpp  AssertTestCuda.cu  AssertTestHip.hip  CMakeLists.txt  CustomScalar.h  CustomScalarTest.cpp  DiscreteMathTest.cpp  FileNameTest.cpp  FileTest.cpp  FileTest.h  FileTestCuda.cu  FileTestHip.hip  GtestPrintToOverrides.h  HypreTest.cpp  MathTest.cpp  ObjectTest.cpp  StringTest.cpp  TimerTest.cpp  TypeInfoTest.cpp  TypeTraitsTest.cpp  base64Test.cpp  main.h  main_mpi.h  zlibCompressionTest.cpp
(+3172 files in other folders)
